add cjsx support

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Hello world!</p>
+        <div id="content"></div>
 
         <!-- build:js -->
-        <script src="scripts/jspm_packages/system.js"></script>
-        <script src="scripts/config.js"></script>
+        <script src="jspm_packages/system.js"></script>
+        <script src="config.js"></script>
         <script>
           System.import('scripts/main')
         </script>
